--- a/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
@@ -23,6 +23,9 @@
             <div class="btn-group" role="group" aria-label="Edit group">
               <button routerLink="/hive/{{hive.id}}" type="button" class="btn btn-primary">Edit</button>
             </div>
+            <div class="btn-group" role="group" aria-label="Restore group" *ngIf="hive.isDeleted">
+                <button type="button" class="btn btn-primary" (click)="onRestore(hive.id)">Restore</button>
+              </div>
           </span>
         </td>
       </tr>
