--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -16,6 +16,11 @@
         <th><div class="btn-group" role="group" aria-label="Edit group">
             <button routerLink="/section/hive_section_id" type="button" class="btn btn-primary">Edit</button>
           </div></th>
+          <th><div class="btn-group" role="group" aria-label="Delete group" *ngIf="!section.isDeleted" >
+            <button type="button" class="btn btn-danger" (click)="onDelete(section.id)">Delete</button></div></th>
+
+          <th><div class="btn-group" role="group" aria-label="Delete group" *ngIf="section.isDeleted" >
+            <button type="button" class="btn btn-primary" (click)="onUndelete(section.id)">Undelete</button></div></th>
     </tbody>
   </table>
   <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
