Create UpdateHiveSectionRequest entity model. Map the UpdateHiveSectionRequest in HiveManagementMappingProfile. Create Validation class UpdateHiveSectionRequestValidator for new model. Add AddHiveSection,UpdateHiveSection,DeleteHiveSection methods to HiveSection Controller.Add CreateHiveSectionAsync,UpdateHiveSectionAsync and DeleteHiveSectionAsync to HiveSectionService

--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -19,7 +19,7 @@
           <th><div class="btn-group" role="group" aria-label="Delete group" *ngIf="!section.isDeleted" >
             <button type="button" class="btn btn-danger" (click)="onDelete(section.id)">Delete</button></div></th>
 
-          <th><div class="btn-group" role="group" aria-label="Delete group" *ngIf="section.isDeleted" >
+          <th><div class="btn-group" role="group" aria-label="unDelete group" *ngIf="section.isDeleted" >
             <button type="button" class="btn btn-primary" (click)="onUndelete(section.id)">Undelete</button></div></th>
     </tbody>
   </table>
