--- a/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
@@ -20,7 +20,7 @@
         <input type="text" class="form-control" id="lastUpdated" aria-describedby="lastUpdatedLabel" required [(ngModel)]="hive.lastUpdated"
         name="lastUpdated" #lastUpdated="ngModel" readonly>
     </div>
-    <div class="form-group" *ngIf='existed'>
+    <div class="form-group">
         <label for="code" id="codeLabel">Hive Code</label>
         <input type="text" class="form-control" id="code" aria-describedby="codeLabel" minlength="5" maxlength="5" required [(ngModel)]="hive.code"
         name="code" #code="ngModel">
@@ -29,7 +29,7 @@
             <div *ngIf="code.errors.minlength">Hive Code must be 5 characters long.</div>
         </div>
     </div>
-    <div class="form-group" *ngIf='existed'>
+    <div class="form-group">
         <label for="address" id="addressLabel">Hive Address</label>
         <input type="text" class="form-control" id="address" aria-describedby="addressLabel" maxlength="300" required [(ngModel)]="hive.address"
         name="address" #address="ngModel">
@@ -43,7 +43,7 @@
             <button type="button" class="btn btn-primary" (click)="onCancel()">Back</button>
         </div>
         <div class="btn-group" role="group" aria-label="Save group">
-            <button type="submit" class="btn btn-primary" (click)="onSubmit()" >Save</button>
+            <button type="submit" role="group" class="btn btn-primary">Save</button>
         </div>
         <div class="btn-group" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted">
             <button type="button" class="btn btn-warning" (click)="onDelete()">Delete</button>
