--- a/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
@@ -1,3 +1,45 @@
-<p>
-  hive-section-form works!
-</p>
+<div class="container">
+  <h2>HiveSection Editor</h2>
+  <form (ngSubmit)="onSubmit()" #hiveSectionForm="ngForm">
+    <div class="form-group" *ngIf='existed'>
+        <label for="idLabel">ID</label>
+        <input type="text" class="form-control" id="id" aria-describedby="idLabel" [(ngModel)]="hiveSection.id" name="id" #id="ngModel"
+            readonly>
+    </div>
+    <div class="form-group">
+        <label for="name" id="nameLabel">HiveSection Name</label>
+        <input type="text" class="form-control" id="name" aria-describedby="nameLabel" minlength="4" maxlength="60" required [(ngModel)]="hiveSection.name"
+        name="name" #name="ngModel">
+        <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+            <div *ngIf="name.errors.required">HiveSection Name is required.</div>
+            <div *ngIf="name.errors.minlength">HiveSection Name must be at least 4 characters long.</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="code" id="codeLabel">HiveSection Code</label>
+        <input type="text" class="form-control" id="code" aria-describedby="codeLabel" minlength="5" maxlength="5" required [(ngModel)]="hiveSection.code"
+        name="code" #code="ngModel">
+        <div *ngIf="code.invalid && (code.dirty || code.touched)" class="alert alert-danger">
+            <div *ngIf="code.errors.required">HiveSection Code is required.</div>
+            <div *ngIf="code.errors.minlength">HiveSection Code must be 5 characters long.</div>
+        </div>
+    </div>
+
+    <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
+        <div class="btn-group" role="group" aria-label="Cancel group">
+            <button type="button" class="btn btn-primary" (click)="onCancel()">Back</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Save group">
+            <button type="submit" class="btn btn-primary" >Save</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Delete group" *ngIf="existed && !hiveSection.isDeleted">
+            <button type="button" class="btn btn-warning" (click)="onDelete()">Delete</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="Purge group" *ngIf="existed && hiveSection.isDeleted">
+            <button type="button" class="btn btn-warning" (click)="onUndelete()">Undelete</button>
+            <button type="button" class="btn btn-danger" (click)="onPurge()">Purge</button>
+        </div>
+      </div>
+  </form>
+</div>
+
