--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -14,7 +14,7 @@
         <th scope="row">{{section.code}}</th>
         <th scope="row">{{section.isDeleted}}</th>
         <th><div class="btn-group" role="group" aria-label="Edit group">
-            <button routerLink="/section/hive_section_id" type="button" class="btn btn-primary">Edit</button>
+            <button routerLink="/hive/{{hiveId}}/section/{{section.id}}" type="button" class="btn btn-primary">Edit</button>
           </div></th>
           <th><div class="btn-group" role="group" aria-label="Delete group" *ngIf="!section.isDeleted" >
             <button type="button" class="btn btn-danger" (click)="onDelete(section.id)">Delete</button></div></th>
@@ -28,7 +28,7 @@
       <button routerLink="/hives" type="button" class="btn btn-primary">Back</button>
     </div>
     <div class="btn-group" role="group" aria-label="Add group">
-      <button routerLink="/hive/{{this.hiveId}}" type="button" class="btn btn-primary">Add hive section</button>
+      <button routerLink="/hive/{{hiveId}}/section/" type="button" class="btn btn-primary">Add hive section</button>
     </div>
   </div>
 </div>
